--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript Basics Functions Lab for Learn.co",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 5000 -R mocha-multi --reporter-options spec=-,json=.results.json"
+    "test": "mocha --timeout 15000 -R mocha-multi --reporter-options spec=-,json=.results.json"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,7 @@
     "chai": "4.1.2",
     "file-system": "2.2.2",
     "jsdom": "9.2.1",
-    "mocha": "5.2.0",
+    "mocha": "^5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "1.0.1"
   }
